# recall

./: README.md  deps_install.sh  meson.build  post_install.py
data/: Application.css  com.github.eugeneia.recall.appdata.xml.in  com.github.eugeneia.recall.contract.in  com.github.eugeneia.recall.desktop.in  com.github.eugeneia.recall.gschema.xml  com.github.eugeneia.recall.sysctl.conf  gresource.xml
debian/: changelog  control  copyright  postinst
dep/recoll/: ChangeLog  INSTALL  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  ylwrap
dep/recoll/aspell/: rclaspell.cpp  rclaspell.h
dep/recoll/common/: autoconfig.h.in  cstr.h  rclconfig.cpp  rclinit.cpp  textsplit.cpp  textsplit.h  unacpp.cpp
dep/recoll/doc/man/: recoll.conf.5
dep/recoll/doc/user/: recoll.conf.xml  usermanual.html  usermanual.xml
dep/recoll/filters/: ppt-dump.py  rclconfig.py  rclepub  rclexecm.py  rclocr.py  rclocrabbyy.py  rclocrcache.py  rclocrtesseract.py  rclpdf.py  rclpst.py  rclwar  recoll-we-move-files.py  xls-dump.py
dep/recoll/index/: idxstatus.cpp  indexer.cpp  recollindex.cpp  webqueue.cpp
dep/recoll/internfile/: mh_execm.cpp  mh_html.cpp  mh_mbox.cpp  mh_xslt.cpp  mimehandler.cpp  myhtmlparse.cpp
dep/recoll/python/pychm/pychm.egg-info/: PKG-INFO  SOURCES.txt
dep/recoll/python/recoll/: pyrecoll.cpp
dep/recoll/python/recoll/recoll/: conftree.py
dep/recoll/qtgui/: advshist.cpp  advshist.h  guiutils.cpp  guiutils.h  main.cpp  multisave.cpp  preview.ui  preview_plaintorich.cpp  preview_plaintorich.h  preview_w.cpp  preview_w.h  rclm_preview.cpp  rclm_view.cpp  rclm_wins.cpp  rclmain.ui  rclmain_w.cpp  rclmain_w.h  restable.cpp  restable.h  snippets_w.cpp  snippets_w.h  spell_w.cpp  ssearch_w.cpp  ssearch_w.h  uiprefs.ui  uiprefs_w.cpp  viewaction_w.cpp  viewaction_w.h
dep/recoll/qtgui/confgui/: confgui.cpp  confgui.h  confguiindex.cpp  confguiindex.h
dep/recoll/qtgui/i18n/: recoll_cs.qm  recoll_cs.ts  recoll_da.qm  recoll_da.ts  recoll_de.qm  recoll_de.ts  recoll_el.qm  recoll_el.ts  recoll_es.qm  recoll_es.ts  recoll_fr.qm  recoll_fr.ts  recoll_hu.qm  recoll_it.qm  recoll_it.ts  recoll_lt.qm  recoll_lt.ts  recoll_nl.qm  recoll_ru.qm  recoll_ru.ts  recoll_tr.qm  recoll_tr.ts  recoll_uk.qm  recoll_uk.ts  recoll_xx.ts  recoll_zh.qm  recoll_zh.ts  recoll_zh_CN.qm  recoll_zh_CN.ts
dep/recoll/query/: docseq.h  docseqdb.cpp  docseqdb.h  plaintorich.cpp  recollq.cpp  reslistpager.cpp
dep/recoll/rcldb/: rclabsfromtext.cpp  rclabstract.cpp  rcldb_p.h  rclquery.cpp  rclquery.h  rclquery_p.h  searchdatatox.cpp
dep/recoll/sampleconf/: mimeconf  mimemap  mimeview  recoll.conf
dep/recoll/testmains/: Makefile.am
dep/recoll/utils/: circache.cpp  conftree.cpp  conftree.h  copyfile.cpp  execmd.h  fstreewalk.cpp  fstreewalk.h  hldata.cpp  hldata.h  log.h  pathut.cpp  pathut.h  rclutil.cpp  rclutil.h  readfile.cpp  smallut.cpp  wipedir.cpp
po/: POTFILES  com.github.eugeneia.recall.pot  de.po  es.po
src/: Application.vala
